# Nauvoo-

./: CMakeLists.txt  README.md
design/: COMBAT_SYSTEM_SPECIFICATION.md  GAMEPLAY_LOOPS_DESIGN.md  NPC_SYSTEM_ARCHITECTURE.md  REPUTATION_AND_MORAL_SYSTEM.md  TECHNICAL_ARCHITECTURE.md
docs/: GAME_DESIGN_DOCUMENT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md
source/: main.cpp
source/Data/: npc_schema.json  phase_1_scenarios.json
source/Data/Dialogue/: dialogue_schema.json  dialogue_trees.json
source/Data/NPCs/: npc_definitions.json
source/Engine/: CoreTypes.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h
source/Systems/: CombatSystem.cpp  CombatSystem.h  DialogueManager.cpp  DialogueManager.h  NPCScheduleManager.cpp  NPCScheduleManager.h  ReputationManager.cpp  ReputationManager.h  SaveGameManager.cpp  SaveGameManager.h  action_modifiers.json
source/Tests/: GameTestSuite.h  test_runner.cpp
